@@ -22,11 +22,11 @@ public class LogManager {
                .forEach(Room::createNewLog);
     }
 
-    public void startLog(BuildingLevel building){
+    public void startLog(BuildingLevel building) throws InterruptedException {
         Room firstRoom = getRooms(building)
                 .sorted(Comparator.comparingInt(Room::getRoomNumber))
                 .toList()
-                .getFirst();
+                .get(0);
         if (firstRoom!=null) {
             new EventFactory().createEvent(EventType.SIMULATION_START, firstRoom, DangerLevel.LOW);
         } else {
@@ -49,10 +49,6 @@ public class LogManager {
             }
             if (!toInsert.isEmpty()) {
                 resultList.add(toInsert.stream().map(EventLog::getEvents).flatMap(List::stream).toList());
-            }
-            else {
-                final var finalI = i;
-                getRooms(building).forEach(room -> room.removeLog(finalI));
             }
         }
         return resultList;
